playbooks/application/roles/gitlab/files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-agent-ingress
  namespace: gitlab-agent
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: gitlab-agent.k3s.scalehub.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab-gitlab-agent-service
                port:
                  number: 8080
